<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/menu_log_level" android:title="@string/log_level"
		android:showAsAction="ifRoom" android:icon="@drawable/ic_menu_sort_by_size" />
		
	<item android:id="@+id/menu_main_log" android:title="@string/play_x1_log"
		android:showAsAction="ifRoom" android:icon="@drawable/ic_menu_play_clip" />
						
	<item android:id="@+id/menu_save_log" android:title="@string/save"
		android:showAsAction="ifRoom" android:icon="@drawable/ic_menu_save" />
		
	<item android:id="@+id/menu_open_log" android:title="@string/open"
		android:showAsAction="ifRoom" android:icon="@drawable/ic_menu_archive" />
	
	<item android:id="@+id/menu_send_log" android:title="@string/send_log"
		android:showAsAction="ifRoom" android:icon="@drawable/ic_menu_send" />
		
				
	<item android:id="@+id/menu_record_log" android:title="@string/start_recording_log"
	     android:showAsAction="always"  android:icon="@drawable/ic_menu_record" />
	
	<item android:id="@+id/menu_stop_recording_log" android:title="@string/stop_recording_log"
		android:showAsAction="always" android:icon="@drawable/ic_menu_stop" />

	<item android:id="@+id/menu_save_as_log" android:title="@string/save_as"
		android:showAsAction="ifRoom" android:icon="@drawable/ic_menu_save" />
	
	<item android:id="@+id/menu_delete_saved_log" android:title="@string/manage_saved_logs"
		android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_delete" />
		
	<item android:id="@+id/menu_partial_select" android:title="@string/menu_title_partial_select"
		android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_agenda" />
	
	<item android:id="@+id/menu_filters" android:title="@string/title_filters"
		android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_search" />
	
	<item android:id="@+id/menu_settings" android:title="@string/settings"
		android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_preferences" />
	<!--  	
	<item android:id="@+id/menu_crazy_logger_service" android:title="Crazy Logger"
			android:alphabeticShortcut="Crazy Logger" />			
	-->			
</menu>